--- a/src/ui/styles/main.css
+++ b/src/ui/styles/main.css
@@ -1,4 +1,5 @@
-﻿@import "./base.css";
+@import "./base.css";
 @import "./layout.css";
 @import "./components.css";
+@import "./mfm.css";
 @import "./theme.css";
